@startuml Torque Mapper Structure
!theme plain
skinparam backgroundColor #FFFFFF
skinparam defaultFontSize 12
skinparam classAttributeIconSize 0

title Torque Mapper - Class Structure

package "Torque_mapper.py" {
    class TorqueMapper {
        - model_registry: Dict
        - ensemble_registry: Dict
        + __init__()
        + dsl_to_ast(torque_command: str): Dict
        + ast_to_python(ast: Dict, variable_name: str): str
        + map_to_python(torque_command: str, variable_name: str): str
        + export_to_json(torque_command: str, output_file: str, variable_name: str): Dict
        - _generate_imports(ast: Dict): str
        - _ast_to_python(ast: Dict, variable_name: str, indent: int): str
        - _build_model_code(model_name: str, kw_args: Dict, var_name: str, indent: int): str
        - _build_ensemble_code(ensemble_name: str, pos_args: List, kw_args: Dict, var_name: str, indent: int): str
        - _python_literal(value: Any): str
    }
}

package "Dependencies" {
    class dsl_mapper {
        + map_dsl_to_ast(dsl_string: str): dict
    }
    
    class registry {
        + MODEL_REGISTRY: Dict
        + ENSEMBLE_REGISTRY: Dict
    }
}

package "Output" {
    class JSONFile {
        + torque_command: str
        + timestamp: str
        + variable_name: str
        + ast: Dict
        + python_code: str
    }
}

TorqueMapper --> dsl_mapper : uses
TorqueMapper --> registry : uses
TorqueMapper --> JSONFile : creates

note right of TorqueMapper
  **Main Responsibilities:**
  1. Convert DSL to AST
  2. Convert AST to Python code
  3. Export to JSON file
  
  **Does NOT execute code**
end note

note right of JSONFile
  **Output Format:**
  - Torque_mapper_result.json
  - Contains AST and Python code
  - Ready for execution by Torque_runner
end note

@enduml
